<?xml version="1.0" encoding="utf-8"?>

<!--
 Copyright (c) 2012 Google Inc.  All Rights Reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/server_name_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_refresh"
        app:hintEnabled="false">

        <AutoCompleteTextView
            android:id="@+id/server_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            tools:text="@string/settings_server_scan_progress"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/found_servers_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_server_prompt"
        android:labelFor="@id/found_servers"
        app:startIconDrawable="@drawable/ic_refresh"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">
        <AutoCompleteTextView
            android:id="@+id/found_servers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/scan_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"/>

    <RadioButton
        android:id="@+id/squeezeServer"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings_local_server" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="2dp"
        app:contentPadding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/server_address_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_serveraddr_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/server_address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_username_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_password_hint"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/wol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_use_wake_on_lan" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mac_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_MAC_label"
                app:helperTextEnabled="true"
                app:helperText="@string/settings_MAC_help"
                app:endIconDrawable="@drawable/ic_info"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mac"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <RadioButton
        android:id="@+id/squeezeNetwork"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/mysqueezebox_com" />

</LinearLayout>
