<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright 2012 Google Inc.  All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/logo"/>

        <TextView
            android:id="@+id/about_title"
            style="@style/SqueezerTextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon"
            android:paddingStart="8dp"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/version_text"
            android:textAppearance="@style/SqueezerTextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/about_title"
            app:layout_constraintStart_toEndOf="@id/icon"
            android:paddingStart="8dp"
            tools:text="1.1.1" />

        <TextView
            android:id="@+id/copyright"
            android:textAppearance="@style/SqueezerTextAppearance.Small"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/icon"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/copyright_text"/>

        <TextView
            android:id="@+id/team"
            android:textAppearance="@style/SqueezerTextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/copyright"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="8dp"
            android:text="@string/about_team"/>

        <TextView
            android:id="@+id/authors"
            android:textAppearance="@style/SqueezerTextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/team"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="8dp"
            android:text="@string/about_authors"/>

        <TextView
            android:id="@+id/support"
            android:textAppearance="@style/SqueezerTextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/authors"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="16dp"
            android:text="@string/about_support"/>

        <TextView
            android:textAppearance="@style/SqueezerTextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/support"
            app:layout_constraintStart_toStartOf="parent"
            android:autoLink="web"
            android:paddingBottom="8dp"
            android:paddingStart="8dp"
            android:text="@string/about_support_text"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
